# ensenso

./: .ci_preparation.sh  .travis.yml  CMakeLists.txt  README.md  epydoc.config  mainpage.dox  package.xml  rosdoc.yaml  setup.py
cfg/: CameraParameters.cfg  CaptureParameters.cfg
config/: rosconsole.conf  rqt_viewer.rviz  viewer.perspective  viewer.rviz
include/: cri_ensenso_grabber.h  ensenso_grabber.h
include/ensenso/: ensenso_grabber.h
launch/: ensenso_driver_rgb.launch  viewer.launch
msg/: RawStereoPattern.msg
scripts/: .ci_preparation.sh  install_driver.sh  snapshooter.py  snapshot_to_bag.py
src/: cri_ensenso_grabber.cpp  ensenso_calibration_server.cpp  ensenso_driver.cpp  ensenso_grabber.cpp  ensenso_node.cpp  handeye_calibration.cpp  handeye_calibration_pre.cpp  metal_plate.cpp  test_rectified_images.cpp  viewer.cpp
src/ensenso/: snatcher.py
src/pubsubtest/: CMakeLists.txt  imageopencv.cpp  package.xml  pubpc.cpp  subpc.cpp
srv/: AXXBsolver.srv  CalibrateHandEye.srv  CalibrationMoveRandom.srv  CameraLights.srv  CapturePattern.srv  CollectPattern.srv  ComputeCalibration.srv  ConfigureStreaming.srv  EstimatePatternPose.srv  GridSpacing.srv  HoleDetector.srv  InitCalibration.srv  PanelDetector.srv
